[workspace]
members = [
    "server/bleep",
    "apps/desktop/src-tauri"
]

[profile.dev]
opt-level = 3

[profile.release]
debug = false
strip = "debuginfo"
lto = true

[profile.profiler]
inherits = "release"
debug = true
split-debuginfo = "unpacked"
strip = "none"

[patch.crates-io]
esaxx-rs = { git = "https://github.com/bloopai/esaxx-rs" }
