[package]
name = "bleep"
version = "0.5.6"
edition = "2021"
default-run = "bleep"
build = "build.rs"

[features]
default = ["dynamic-ort", "ee-pro"]
debug = ["console-subscriber", "histogram"]
dynamic-ort = ["ort/load-dynamic"]
ee-pro = []
ee-cloud = ["ee-pro"]

[[bin]]
name = "bleep"

[[bench]]
name = "snippets"
harness = false

[[bench]]
name = "indexes"
harness = false

[[bench]]
name = "queries"
harness = false

[dependencies]

# core
tantivy = { version = "0.21.0", features = ["mmap"] }
tantivy-columnar = "0.2.0"
tokio = { version = "1.32.0", features = ["macros", "process", "rt", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }
tokio-stream = "0.1.14"
async-trait = "0.1.73"
async-stream = "0.3.5"
flume = "0.10.14"
futures = "0.3.28"
rayon = "1.8.0"
clap = { version = "4.4.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-appender = "0.2.2"
color-eyre = "0.6.2"
regex = "1.9.5"
regex-syntax = "0.6.29"
fuzzy-matcher = "0.3.7"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.6.3", features = ["sqlite", "migrate", "offline", "runtime-tokio-rustls", "chrono", "uuid"] }

# for debugging
console-subscriber = { version = "0.1.10", optional = true }
histogram = { version = "0.7.4", optional = true }

# error handling
anyhow = "1.0.75"
thiserror = "1.0.48"

# query parsing
pest = "2.7.3"
pest_derive = "2.7.3"

# code-nav
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.6"
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go", rev = "05900fa" }
tree-sitter-javascript = "0.20.1"
tree-sitter-python = "=0.20.2"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.2"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", tag = "v0.20.0" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5ead1e2" }
tree-sitter-ruby = "0.20.0"
tree-sitter-r = "0.19.5"
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php" }
petgraph = { version = "0.6.4", default-features = false, features = ["serde-1"] }

# webserver
serde_json = "1.0.107"
axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
axum-extra = { version = "0.8.0", features = ["cookie", "cookie-private"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["auth", "cors", "catch-panic", "fs"] }

# api integrations
octocrab = { version = "0.25.1", features = ["rustls", "rustls-webpki-tokio"] }
reqwest = { version = "0.11.20", features = ["rustls-tls-webpki-roots", "cookies", "gzip"], default-features = false }
reqwest-eventsource = "0.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }

# file processing
ignore = "=0.4.20"
hyperpolyglot = { git = "https://github.com/bloopai/hyperpolyglot" }
blake3 = "1.5.0"
notify-debouncer-mini = { version = "0.3.0", default-features = false }

# git
git-version = "0.3.5"
gix = { git = "https://github.com/BloopAI/gitoxide", version="0.55.2", features = ["blocking-http-transport-reqwest-rust-tls-no-trust-dns", "pack-cache-lru-static"] }

# semantic
rake = { path = "/Users/rafael/workspace/rafael_bloop/rake-rs" }
ndarray = "0.15"
qdrant-client = { version = "1.5.0", default-features = false }
tiktoken-rs = "0.4.5"
tokenizers = { version = "0.14.0", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }

# answer parsing
# We use the git version here, so that we can pull in recent changes that make footnotes work. The
# latest crates.io version at the time of writing does not include necessary patches.
#
# 25.09.23: we now maintain a fork for stability
comrak = { default-features = false, git = "https://github.com/rsdy/comrak" }
lazy-regex = "3.0.2"
quick-xml = { version = "0.29.0", features = ["serialize"] }

# telemetry
sentry = { version = "0.31.7", default-features = false, features = ["tracing", "contexts", "debug-images", "panic", "rustls", "reqwest"] }
sentry-tracing = "0.31.7"
rudderanalytics = { version = "1.1.2", default-features = false, features = ["rustls-tls"] }

# auth
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
jwt-authorizer = { version = "0.11.0", default-features = false, features = ["rustls-tls-webpki-roots", "chrono"] }
ring = "0.16.20"
hex = "0.4.3"
base64 = "0.21.4"

# misc
serde = "1.0.188"
erased-serde = "0.3.31"
smallvec = { version = "1.11.1", features = ["serde"]}
either = "1.9.0"
compact_str = "0.7.1"
bincode = "1.3.3"
directories = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"], default-features = false }
phf = "0.11.2"
rand = "0.8.5"
once_cell = "1.18.0"
relative-path = "1.9.0"
semver = { version = "1", features = ["serde"] }
scc = { version= "1.9.1", features = ["serde"] }
thread-priority = "0.13.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
pretty_assertions = "1.4.0"
tempdir = "0.3.7"
expect-test = "1.4.1"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking"] }

[build-dependencies]
phf_codegen = "0.11.2"
serde = {version = "1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
blake3 = "1.5.0"
