[package]
name = "bleep"
version = "0.6.4"
edition = "2021"
default-run = "bleep"
build = "build.rs"

[features]
default = ["color-eyre"]
debug = ["console-subscriber", "histogram"]
onnx = []
metal = []

[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
ndarray = { version = "0.15" }
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry", features = ["load-dynamic"] }

[target.aarch64-apple-darwin.dependencies]
llm = { git = "https://github.com/bloopai/llm", branch = "batch-metal-kernels", default-features = false, features = ["bert", "metal"] }

[[bin]]
name = "bleep"
required-features = ["color-eyre"]

[dependencies]

# core
tantivy = { version = "0.21.0", features = ["mmap"] }
tantivy-columnar = "0.2.0"
tokio = { version = "1.32.0", features = ["macros", "process", "rt", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }
tokio-stream = { version = "0.1.14", features = ["sync"]}
async-trait = "0.1.73"
async-stream = "0.3.5"
flume = "0.10.14"
futures = "0.3.30"
futures-util = "0.3.30"
rayon = "1.8.0"
clap = { version = "4.4.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-appender = "0.2.2"
color-eyre = { version = "0.6.2", optional = true }
regex = "1.9.5"
regex-syntax = "0.6.29"
fuzzy-matcher = "0.3.7"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.6.3", features = ["sqlite", "migrate", "offline", "runtime-tokio-rustls", "chrono", "uuid"] }

# for debugging
console-subscriber = { version = "0.1.10", optional = true }
histogram = { version = "0.7.4", optional = true }

# error handling
anyhow = "1.0.75"
thiserror = "1.0.48"

# query parsing
pest = "2.7.3"
pest_derive = "2.7.3"

# code-nav
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.6"
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go", rev = "05900fa" }
tree-sitter-javascript = "0.20.1"
tree-sitter-python = "=0.20.2"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20.2"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java", tag = "v0.20.0" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5ead1e2" }
tree-sitter-ruby = "0.20.0"
tree-sitter-r = "0.19.5"
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php" }
tree-sitter-COBOL = { git = "https://github.com/BloopAI/tree-sitter-cobol" }
petgraph = { version = "0.6.4", default-features = false, features = ["serde-1"] }

# webserver
serde_json = "1.0.107"
axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["auth", "cors", "catch-panic", "fs"] }

# api integrations
octocrab = { version = "0.25.1", features = ["rustls", "rustls-webpki-tokio"] }
reqwest = { version = "0.11.20", features = ["rustls-tls-webpki-roots", "cookies", "gzip"], default-features = false }
reqwest-eventsource = "0.5.0"
secrecy = { version = "0.8.0", features = ["serde"] }

# file processing
ignore = "=0.4.20"
hyperpolyglot = { git = "https://github.com/bloopai/hyperpolyglot" }
blake3 = "1.5.0"
notify-debouncer-mini = { version = "0.3.0", default-features = false }

# git
git-version = "0.3.5"
gix = { git = "https://github.com/BloopAI/gitoxide", version="0.55.2", features = ["blocking-http-transport-reqwest-rust-tls-no-trust-dns", "pack-cache-lru-static"] }

# semantic
qdrant-client = { version = "1.5.0", default-features = false }
tiktoken-rs = "0.5.7"
tokenizers = { version = "0.14.0", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
itertools = "0.10.0"


# answer parsing
# We use the git version here, so that we can pull in recent changes that make footnotes work. The
# latest crates.io version at the time of writing does not include necessary patches.
#
# 25.09.23: we now maintain a fork for stability
comrak = { default-features = false, git = "https://github.com/BloopAI/comrak" }
lazy-regex = "3.0.2"
quick-xml = { version = "0.29.0", features = ["serialize"] }

# doc scraper
select = "0.6"
tree-sitter-md = "0.1.5"
url = "2.4.1"

# misc
serde = "1.0.188"
erased-serde = "0.3.31"
smallvec = { version = "1.11.1", features = ["serde"]}
either = "1.9.0"
compact_str = "0.7.1"
bincode = "1.3.3"
directories = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"], default-features = false }
phf = "0.11.2"
rand = "0.8.5"
once_cell = "1.18.0"
relative-path = "1.9.0"
scc = { version= "1.9.1", features = ["serde"] }
thread-priority = "0.13.1"
diffy = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempdir = "0.3.7"
expect-test = "1.4.1"

[build-dependencies]
phf_codegen = "0.11.2"
serde = {version = "1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
blake3 = "1.5.0"
