[package]
name = "bloop"
version = "0.3.5"
description = "Search code. Fast."
authors = ["Bloop AI Developers"]
license = "Apache-2.0"
repository = "https://github.com/bloopai/bloop"
default-run = "bloop"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-open", "fs-all", "http-all", "native-tls-vendored", "os-all", "path-all", "process-all", "shell-all", "updater", "window-all"] }
bleep = { path = "../../../server/bleep", package = "bleep" }
anyhow = "1.0.68"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
once_cell = "1.17.0"
sentry = "0.29.2"
qdrant-client = "0.11.6"
git-version = "0.3.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = [ "resource" ] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
