[package]
name = "bloop"
version = "0.6.4"
description = "Search code. Fast."
authors = ["Bloop AI Developers"]
license = "Apache-2.0"
repository = "https://github.com/bloopai/bloop"
default-run = "bloop"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["dialog-open", "fs-all", "http-all", "native-tls-vendored", "os-all", "path-all", "process-all", "shell-all", "updater", "window-all"] }
bleep = { path = "../../../server/bleep", package = "bleep" }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
color-eyre = "0.6.2"
once_cell = "1.18.0"
sentry = "0.31.7"
qdrant-client = "1.5.0"
git-version = "0.3.5"
sentry-anyhow = "0.31.7"
sysinfo = "0.29.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.4", default-features = false, features = [ "resource" ] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
